[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/menus/options/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/font/font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/ui-bits/SelectSquare.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/effects/theme-submenu.tres" type="Theme" id=4]
[ext_resource path="res://scenes/effects/BackgroundBlur.gdshader" type="Shader" id=5]

[sub_resource type="Animation" id=1]
resource_name = "close"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )
shader_param/lod = 2.0
shader_param/aberration_strength = 1.0

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0, 0, 0, 1, 0.078125, 0.078125, 0.078125, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 1024

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0, 1, 0.132812, 1, 0.171875, 1, 0.28186, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="Background" type="ColorRect" parent="."]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.156863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="ReferenceRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
border_color = Color( 1, 1, 1, 0.588235 )
border_width = 2.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectSquare" parent="." instance=ExtResource( 3 )]
options_path = NodePath("../VBoxContainer/Options")
on_left = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 40.0
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 204.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 4 )
text = "options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 204.0
margin_bottom = 250.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Label" parent="VBoxContainer/Options"]
margin_right = 204.0
margin_bottom = 17.0
text = "back"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AntiAliasing" type="Label" parent="VBoxContainer/Options"]
margin_top = 37.0
margin_right = 204.0
margin_bottom = 54.0
mouse_default_cursor_shape = 16
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "anti-aliasing"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Options/AntiAliasing"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -110.0
margin_right = 150.0
text = "> smoothens out sharp lines (MSAA 4x)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bloom" type="Label" parent="VBoxContainer/Options"]
margin_top = 74.0
margin_right = 204.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "bloom"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Options/Bloom"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -153.0
margin_right = 111.0
text = "> makes bright parts of the screen glow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="HBoxContainer" parent="VBoxContainer/Options"]
margin_top = 111.0
margin_right = 204.0
margin_bottom = 128.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Options/MusicVolume"]
margin_right = 94.0
margin_bottom = 17.0
text = "music volume"

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/Options/MusicVolume"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 17.0
value = 100.0
texture_under = SubResource( 6 )
texture_progress = SubResource( 8 )
nine_patch_stretch = true
stretch_margin_right = 100

[node name="SFXVolume" type="HBoxContainer" parent="VBoxContainer/Options"]
margin_top = 148.0
margin_right = 204.0
margin_bottom = 165.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Options/SFXVolume"]
margin_right = 73.0
margin_bottom = 17.0
text = "sfx volume"

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/Options/SFXVolume"]
margin_left = 83.0
margin_right = 183.0
margin_bottom = 17.0
value = 100.0
texture_under = SubResource( 6 )
texture_progress = SubResource( 8 )
nine_patch_stretch = true
stretch_margin_right = 100

[connection signal="selected" from="SelectSquare" to="." method="_on_SelectSquare_selected"]
